# assessment-may24

./: .gitignore  CMakeLists.txt  README.md  improvements.txt
part1/: CMakeLists.txt
part1/include/: hashtable.hpp  hashtableinterface.hpp  library.hpp
part1/source/: hashtable.cpp  library.cpp  main.cpp
part1/test/: test.cpp
part2/: CMakeLists.txt
part2/include/: aggregatetradeparser.hpp  endpoint.hpp  endpointinterface.hpp
part2/resource/: binance.txt
part2/source/: aggregatetradeparser.cpp  endpoint.cpp  main.cpp
part2/test/: test.cpp
